--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
     <section>
         <h2>SOCIAL MEDIA</h2>
         <ul>
-            <li>CLICK HERE TO VISIT OUR FACEBOOK PAGE</li>
+            <li><a target="_blank" href="https://www.facebook.com/22ndMeathDonore">CLICK HERE TO VISIT OUR FACEBOOK PAGE</a></li>
         </ul>
     </section>
     <section>
         <h2>SCOUTING IRELAND</h2>
         <ul>
-            <li>CLICK HERE TO GO TO THE SCOUTING IRELAND WEBSITE</li>
+            <li><a target="_blank" href="https://www.scouts.ie/Splash/">CLICK HERE TO GO TO THE SCOUTING IRELAND WEBSITE</a></li>
         </ul>
     </section>
     <footer>
