--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>22nd Meath Donore</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="main-header">
+        <nav class="nav main-nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="guides-list.html">GUIDES</a></li>
                 <li><a href="contact.html">CONTACT US</a></li>
             </ul>
         </nav>
-        <hr>
-        <h1>22nd Meath Donore</h1>
+        <h1 class="group-name group-name-large">22nd Meath Donore</h1>
     </header>
-    <section>
-        <h2>ABOUT OUR GROUP</h2>
+    <section class="content-section container">
+        <h2 class="section-header">ABOUT OUR GROUP</h2>
+        <img class="about-group-image" src="images/flag.jpg">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin faucibus neque eu pretium. 
             Donec aliquam mi sit amet faucibus gravida. Curabitur luctus porttitor nisi, in mattis sem sodales nec. 
@@ -29,9 +30,9 @@
             condimentum et cursus in, tincidunt a dui. Donec et nunc erat. Proin id laoreet tortor. 
             Suspendisse a magna facilisis, tincidunt nulla id, vulputate lorem. Proin mi sem, suscipit non neque sit amet,
             pharetra malesuada erat. Nam sagittis ipsum nisl. Nam sollicitudin sit amet nisi vitae lacinia. Quisque pulvinar 
-            mi id turpis interdum imperdiet.
+            mi id turpis interdum imperdiet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin faucibus neque eu pretium. 
+            Donec aliquam mi sit amet faucibus gravida. Curabitur luctus porttitor nisi, in mattis sem sodales nec. 
         </p>
-        <img src="images/flag.jpg">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin faucibus neque eu pretium. 
             Donec aliquam mi sit amet faucibus gravida. Curabitur luctus porttitor nisi, in mattis sem sodales nec. 
@@ -41,15 +42,20 @@
             condimentum et cursus in, tincidunt a dui. Donec et nunc erat. Proin id laoreet tortor. 
             Suspendisse a magna facilisis, tincidunt nulla id, vulputate lorem. Proin mi sem, suscipit non neque sit amet,
             pharetra malesuada erat. Nam sagittis ipsum nisl. Nam sollicitudin sit amet nisi vitae lacinia. Quisque pulvinar 
+            mi id turpis interdum imperdiet.Suspendisse a magna facilisis, tincidunt nulla id, vulputate lorem. Proin mi sem, suscipit non neque sit amet,
+            pharetra malesuada erat. Nam sagittis ipsum nisl. Nam sollicitudin sit amet nisi vitae lacinia. Quisque pulvinar 
+            mi id turpis interdum imperdiet.pharetra malesuada erat. Nam sagittis ipsum nisl. Nam sollicitudin sit amet nisi vitae lacinia. Quisque pulvinar 
             mi id turpis interdum imperdiet.
         </p>
     </section>
-    <footer>
-        <h3>22nd Meath Donore</h3>
-        <ul>
+    <footer class="main-footer">
+        <div class="main-footer-container container">
+        <h3 class="group-name">22nd Meath Donore</h3>
+        <ul class="nav footer-nav">
             <li><a target="_blank" href="https://www.facebook.com/22ndMeathDonore"><img src="images/logo-facebook-white.png"></a></li>
             <li><a target="_blank" href="https://www.scouts.ie/Splash/"><img src="images/Scouting Ireland Emblem with Green Shamrock.png"></a></li>
         </ul>
+        </div>
     </footer>
 </body>
 </html>
