--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>22nd Meath Donore</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="main-header">
+        <nav class="nav main-nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="guides-list.html">GUIDES</a></li>
                 <li><a href="contact.html">CONTACT US</a></li>
             </ul>
         </nav>
-        <hr>
-        <h1>22nd Meath Donore</h1>
+        <h1 class="group-name group-name-large">22nd Meath Donore</h1>
     </header>
     <section>
         <h2>SOCIAL MEDIA</h2>
@@ -30,12 +30,14 @@
             <li><a target="_blank" href="https://www.scouts.ie/Splash/">CLICK HERE TO GO TO THE SCOUTING IRELAND WEBSITE</a></li>
         </ul>
     </section>
-    <footer>
-        <h3>22nd Meath Donore</h3>
-        <ul>
+    <footer class="main-footer">
+        <div class="main-footer-container container">
+        <h3 class="group-name">22nd Meath Donore</h3>
+        <ul class="nav footer-nav">
             <li><a target="_blank" href="https://www.facebook.com/22ndMeathDonore"><img src="images/logo-facebook-white.png"></a></li>
             <li><a target="_blank" href="https://www.scouts.ie/Splash/"><img src="images/Scouting Ireland Emblem with Green Shamrock.png"></a></li>
         </ul>
+        </div>
     </footer>
 </body>
 </html>
