fiddled with css

--- a/Public/guides-list.html
+++ b/Public/guides-list.html
@@ -20,18 +20,18 @@
     </header>
    <section class="list-section">
        <h2 class="list-header">BUYER GUIDES</h2>
-       <ul>
-           <li>boot buying</li>
-           <li>knife buying</li>
-           <li>tent buying</li>
+       <ul class="list">
+           <li class="list-item boot-buying-listing"><a href="temp-guide.html">boot buying </a></li>
+           <li class="list-item knife-buying-listing">knife buying</li>
+           <li class="list-item tent-buying-listing">tent buying</li>
        </ul>
    </section>
    <section class="list-section">
     <h2 class="list-header">BUYER GUIDES</h2>
     <ul>
-        <li>boot buying</li>
-        <li>knife buying</li>
-        <li>tent buying</li>
+        <li class="list-item">boot buying</li>
+        <li class="list-item">knife buying</li>
+        <li class="list-item">tent buying</li>
     </ul>
 </section>
    <footer class="main-footer">
