finalised the design of the guides page

--- a/Public/guides-list.html
+++ b/Public/guides-list.html
@@ -18,23 +18,26 @@
         </nav>
         <h1 class="group-name group-name-large">22nd Meath Donore</h1>
     </header>
-   <section class="list-section">
+   
+    <section class="list-section">
        <h2 class="list-header">BUYER GUIDES</h2>
-       <ul class="list">
-           <li class="list-item boot-buying-listing"><a href="temp-guide.html">boot buying </a></li>
-           <li class="list-item knife-buying-listing">knife buying</li>
-           <li class="list-item tent-buying-listing">tent buying</li>
-       </ul>
+       <div class="list">
+           <a class="list-item boot-buying-listing" href="temp-guide.html">BOOT BUYING</a>
+           <a class="list-item knife-buying-listing" href="temp-guide.html">KNIFE BUYING</a>
+           <a class="list-item tent-buying-listing" href="temp-guide.html">TENT BUYING</a>
+        </div>
    </section>
+
    <section class="list-section">
     <h2 class="list-header">BUYER GUIDES</h2>
-    <ul>
-        <li class="list-item">boot buying</li>
-        <li class="list-item">knife buying</li>
-        <li class="list-item">tent buying</li>
-    </ul>
+    <div class="list">
+        <a class="list-item boot-buying-listing" href="temp-guide.html">BOOT BUYING</a>
+        <a class="list-item knife-buying-listing" href="temp-guide.html">KNIFE BUYING</a>
+        <a class="list-item tent-buying-listing" href="temp-guide.html">TENT BUYING</a>
+     </div>
 </section>
-   <footer class="main-footer">
+  
+<footer class="main-footer">
     <div class="main-footer-container container">
     <h3 class="group-name">22nd Meath Donore</h3>
     <ul class="nav footer-nav">
