updated html and css for the contact page

--- a/Public/contact.html
+++ b/Public/contact.html
@@ -18,17 +18,21 @@
         </nav>
         <h1 class="group-name group-name-large">22nd Meath Donore</h1>
     </header>
-    <section>
+    <section class="contact-section">
+        <div>
         <h2>SOCIAL MEDIA</h2>
-        <ul>
-            <li><a target="_blank" href="https://www.facebook.com/22ndMeathDonore">CLICK HERE TO VISIT OUR FACEBOOK PAGE</a></li>
-        </ul>
+        <div>
+            <a target="_blank" href="https://www.facebook.com/22ndMeathDonore">CLICK HERE TO VISIT OUR FACEBOOK PAGE</a>
+        </div>
+        </div>
     </section>
-    <section>
+    <section class="contact-section">
+        <div>
         <h2>SCOUTING IRELAND</h2>
-        <ul>
-            <li><a target="_blank" href="https://www.scouts.ie/Splash/">CLICK HERE TO GO TO THE SCOUTING IRELAND WEBSITE</a></li>
-        </ul>
+        <div>
+            <a target="_blank" href="https://www.scouts.ie/Splash/">CLICK HERE TO GO TO THE SCOUTING IRELAND WEBSITE</a>
+        </div>
+        </div>
     </section>
     <footer class="main-footer">
         <div class="main-footer-container container">
