--- a/Public/guides-list.html
+++ b/Public/guides-list.html
@@ -23,7 +23,7 @@
        <h2 class="list-header">BUYER GUIDES</h2>
        <div class="list">
            <a class="list-item boot-buying-listing" href="temp-guide.html">BOOT BUYING</a>
-           <a class="list-item knife-buying-listing" href="temp-guide.html">KNIFE BUYING</a>
+           <a class="list-item knife-buying-listing" href="temp-guide.html">sKNIFE BUYING</a>
            <a class="list-item tent-buying-listing" href="temp-guide.html">TENT BUYING</a>
         </div>
    </section>
